<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.fragment.SetMinMaxRateFragment">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="35dp"
        android:text="@string/set_price"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/setPriceMin"
        android:layout_width="175dp"
        android:layout_height="55dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/search_background"
        android:fontFamily="@font/titillium_web"
        android:gravity="center"
        android:hint="@string/set_min_price"
        android:inputType="number"
        android:textColor="@color/black"
        android:textColorHint="@color/material_dynamic_neutral_variant30"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/setPriceMax"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleText" />

    <EditText
        android:id="@+id/setPriceMax"
        android:layout_width="175dp"
        android:layout_height="55dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/search_background"
        android:fontFamily="@font/titillium_web"
        android:gravity="center"
        android:hint="@string/set_max_price"
        android:inputType="number"
        android:textColor="@color/black"
        android:textColorHint="@color/material_dynamic_neutral_variant30"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/setPriceMin"
        app:layout_constraintTop_toBottomOf="@+id/titleText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/checkBtn"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/btn_background"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/check_history"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setPriceMin" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/confirmBtn"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/btn_background"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/confirm"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>