<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/CardViewCrypto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="30dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_1">

            <ImageView
                android:id="@+id/imageViewIcon"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="32dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/test" />

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/nunito_bold"
                android:gravity="center"
                android:text="NAME"
                android:textColor="@color/color_2"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageViewIcon"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/titillium_web"
                android:gravity="center"
                android:text="@string/current_price"
                android:textColor="@color/color_2"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/imageViewIcon"
                app:layout_constraintTop_toBottomOf="@+id/textViewName" />

            <TextView
                android:id="@+id/textViewTotalVolume"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/titillium_web"
                android:gravity="center"
                android:text="@string/total_volume"
                android:textColor="@color/color_2"
                android:textStyle="bold"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/imageViewIcon"
                app:layout_constraintTop_toBottomOf="@+id/textViewPrice" />

            <TextView
                android:id="@+id/textViewPriceChange"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/titillium_web"
                android:gravity="center"
                android:text="@string/price_change"
                android:textColor="@color/color_2"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageViewIcon"
                app:layout_constraintTop_toBottomOf="@+id/textViewTotalVolume" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
